Refactor gift-tester.html for key sending functionality

--- a/gift-tester.html
+++ b/gift-tester.html
@@ -1,55 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>GiftTester</title>
-    <style>
-        body {
-            background: #111;
-            color: #fff;
-            font-family: Arial;
-            text-align: center;
-            margin-top: 50px;
-        }
-        button {
-            padding: 15px 30px;
-            font-size: 20px;
-            margin: 10px;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-    </style>
+    <title>Gift Tester</title>
 </head>
 <body>
+    <h1>Key Sender Test</h1>
+    <p>PC の key_receiver.py にキーを送信できます。</p>
 
-<h1>Gift Key Test Sender</h1>
+    <input id="key" placeholder="送信したいキーを入力 (例: a, w, space)">
+    <button onclick="sendKey()">送信</button>
 
-<p>押したいキーを入力してください</p>
-<input id="keyInput" type="text" maxlength="1" style="font-size:20px; padding:10px;">
-<br><br>
-
-<button onclick="send()">送信する</button>
-
-<p id="result" style="margin-top:20px;"></p>
+    <p id="result"></p>
 
 <script>
-async function send() {
-    const key = document.getElementById("keyInput").value;
-    if (!key) {
-        alert("キーを入力してください");
-        return;
-    }
+async function sendKey() {
+    const key = document.getElementById("key").value;
+    if (!key) return alert("キーを入力してください！");
 
-    const url = "https://gift-system.onrender.com/gift"
-              + "?token=nezusystemde"
-              + "&key=" + encodeURIComponent(key)
-              + "&duration_ms=50";
+    const res = await fetch("/send-key", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ key })
+    });
 
-    const res = await fetch(url, { method: "POST" });
-    const text = await res.text();
-    document.getElementById("result").innerText = text;
+    const data = await res.text();
+    document.getElementById("result").innerText = data;
 }
 </script>
-
 </body>
 </html>
